--- a/deploy/tektoncd/dashboard/values.yaml
+++ b/deploy/tektoncd/dashboard/values.yaml
@@ -1,5 +1,5 @@
 ingress:
   annotations: {}
   className: "nginx"
-  host: "tekton.dracon.localhost"
+  host: "tekton.smithy.localhost"
   tlsEnabled: false
