--- a/docs/examples/github-project/kustomization.yaml
+++ b/docs/examples/github-project/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 nameSuffix: -github-project
-namespace: dracon
+namespace: smithy
 
 resources:
   - ../../../components/base/pipeline.yaml
