--- a/docs/examples/jira-project/pipelinerun/pipelinerun.tmpl.yaml
+++ b/docs/examples/jira-project/pipelinerun/pipelinerun.tmpl.yaml
@@ -2,11 +2,11 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  generateName: dracon-jira-project-
-  namespace: dracon
+  generateName: smithy-jira-project-
+  namespace: smithy
 spec:
   pipelineRef:
-    name: dracon-jira-project
+    name: smithy-jira-project
   params:
   - name: consumer-jira-url
     value: "$CONSUMER_JIRA_URL"
@@ -16,7 +16,7 @@ spec:
     value: "$CONSUMER_JIRA_USER"
   - name: consumer-jira-config
     value: |
-      {"defaultValues":{"project":"TEST","issueType":"Task","customFields":null},"descriptionTemplate":"Dracon found '{{.RawIssue.Title}}' at '{{.RawIssue.Target}}', severity '{{.RawIssue.Severity}}', rule id: '{{.RawIssue.Type}}', CVSS '{{.RawIssue.Cvss}}' Confidence '{{.RawIssue.Confidence}}' Original Description: {{.RawIssue.Description}}, Cve {{.RawIssue.Cve}},\n{{ range $key,$element := .Annotations }}{{$key}}:{{$element}}\n{{end}}","addToDescription":["scan_start_time","tool_name","target","type","confidence_text","annotations"],"mappings":null}
+      {"defaultValues":{"project":"TEST","issueType":"Task","customFields":null},"descriptionTemplate":"Smithy found '{{.RawIssue.Title}}' at '{{.RawIssue.Target}}', severity '{{.RawIssue.Severity}}', rule id: '{{.RawIssue.Type}}', CVSS '{{.RawIssue.Cvss}}' Confidence '{{.RawIssue.Confidence}}' Original Description: {{.RawIssue.Description}}, Cve {{.RawIssue.Cve}},\n{{ range $key,$element := .Annotations }}{{$key}}:{{$element}}\n{{end}}","addToDescription":["scan_start_time","tool_name","target","type","confidence_text","annotations"],"mappings":null}
   - name: repository_url
     value:  https://github.com/trufflesecurity/test_keys
   workspaces:
