--- a/components/consumers/aws-s3/task.yaml
+++ b/components/consumers/aws-s3/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-aws-s3
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to an S3 bucket.
   volumes:
