--- a/components/consumers/bigquery/task.yaml
+++ b/components/consumers/bigquery/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-bigquery
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to a BigQuery database.
   volumes:
