--- a/components/consumers/dependency-track/task.yaml
+++ b/components/consumers/dependency-track/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-dependency-track
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to a Dependency-Track instance.
   params:
