--- a/components/consumers/jira/task.yaml
+++ b/components/consumers/jira/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-jira
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to a Jira instance.
   volumes:
