--- a/components/consumers/pdf/task.yaml
+++ b/components/consumers/pdf/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-pdf
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to an S3 bucket as PDFs.
   volumes:
