--- a/components/consumers/slack/task.yaml
+++ b/components/consumers/slack/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-slack
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Pushes findings to a Slack channel.
   params:
