--- a/components/consumers/stdout-json/task.yaml
+++ b/components/consumers/stdout-json/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: consumer-stdout-json
   labels:
     v1.smithy.smithy-security.com/component: consumer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Prints findings to stdout in JSON format.
   workspaces:
