--- a/components/enrichers/codeowners/task.yaml
+++ b/components/enrichers/codeowners/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: enricher-codeowners
   labels:
     v1.smithy.smithy-security.com/component: enricher
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Identifies a code owner for each finding.
   params:
