--- a/components/enrichers/custom-annotation/task.yaml
+++ b/components/enrichers/custom-annotation/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: enricher-custom-annotation
   labels:
     v1.smithy.smithy-security.com/component: enricher
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Adds a set of custom annotations to all issues that pass through this
   params:
