--- a/components/enrichers/depsdev/task.yaml
+++ b/components/enrichers/depsdev/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: enricher-depsdev
   labels:
     v1.smithy.smithy-security.com/component: enricher
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Adds context from deps.dev for each third-party dependency.
   params:
