--- a/components/enrichers/policy/task.yaml
+++ b/components/enrichers/policy/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: enricher-policy
   labels:
     v1.smithy.smithy-security.com/component: enricher
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Enforces security policies defined in OPA for each finding.
   sidecars:
