--- a/components/enrichers/reachability/task.yaml
+++ b/components/enrichers/reachability/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: enricher-reachability
   labels:
     v1.smithy.smithy-security.com/component: enricher
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Performs a reachability check on a supplied repository using AppThreat/atom.
   params:
