--- a/components/producers/brakeman/task.yaml
+++ b/components/producers/brakeman/task.yaml
@@ -6,7 +6,8 @@ metadata:
   labels:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sast
-    v1.smithy.smithy-security.com/language: brakeman
+    v1.smithy.smithy-security.com/language: ruby
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Analyse Ruby source code usign brakeman to look for security issues.
   params:
