--- a/components/producers/cdxgen/task.yaml
+++ b/components/producers/cdxgen/task.yaml
@@ -7,6 +7,7 @@ metadata:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sbom
     v1.smithy.smithy-security.com/language: all
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generate a CycloneDX SBOM from source code.
   params:
