--- a/components/producers/checkov/task.yaml
+++ b/components/producers/checkov/task.yaml
@@ -7,6 +7,7 @@ metadata:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sast
     v1.smithy.smithy-security.com/language: iac
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Analyse IAC source code to look for security issues.
   params:
