--- a/components/producers/dependency-check/task.yaml
+++ b/components/producers/dependency-check/task.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sca
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generate a Dependency-Check report from source code.
   volumes:
