--- a/components/producers/dependency-track/task.yaml
+++ b/components/producers/dependency-track/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: producer-dependency-track
   labels:
     v1.smithy.smithy-security.com/component: producer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generate a Dependency-Track report from source code.
   params:
