--- a/components/producers/github-codeql/task.yaml
+++ b/components/producers/github-codeql/task.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sast
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Retrieve a GitHub Code Scanning report from a GitHub repository.
   params:
