--- a/components/producers/java-findsecbugs/task.yaml
+++ b/components/producers/java-findsecbugs/task.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/language: java
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generate a FindSecBugs report from source code.
   params:
