--- a/components/producers/ossf-scorecard/task.yaml
+++ b/components/producers/ossf-scorecard/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: producer-ossf-scorecard
   labels:
     v1.smithy.smithy-security.com/component: producer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generates scorecards for open source projects to show how they adhere with best practices.
   params:
