--- a/components/producers/python-bandit/task.yaml
+++ b/components/producers/python-bandit/task.yaml
@@ -7,6 +7,7 @@ metadata:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sast
     v1.smithy.smithy-security.com/language: python
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: SAST scanner that analyses Python source code to look for security issues.
   volumes:
