--- a/components/producers/python-pip-safety/task.yaml
+++ b/components/producers/python-pip-safety/task.yaml
@@ -7,6 +7,7 @@ metadata:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sca
     v1.smithy.smithy-security.com/language: python
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Dependency scanner for Python projects.
   params:
