--- a/components/producers/semgrep/task.yaml
+++ b/components/producers/semgrep/task.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sast
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Analyse source code using Semgrep to look for security issues.
   params:
