--- a/components/producers/testsslsh/task.yaml
+++ b/components/producers/testsslsh/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: producer-testsslsh
   labels:
     v1.smithy.smithy-security.com/component: producer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Generate a Testssl.sh report from a target URL.
   params:
