--- a/components/producers/trufflehog/task.yaml
+++ b/components/producers/trufflehog/task.yaml
@@ -5,6 +5,7 @@ metadata:
   name: producer-trufflehog
   labels:
     v1.smithy.smithy-security.com/component: producer
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Secret scanner for repositories.
   params:
