--- a/components/producers/typescript-yarn-audit/task.yaml
+++ b/components/producers/typescript-yarn-audit/task.yaml
@@ -7,6 +7,7 @@ metadata:
     v1.smithy.smithy-security.com/component: producer
     v1.smithy.smithy-security.com/test-type: sca
     v1.smithy.smithy-security.com/language: typescript
+    v1.smithy.smithy.security/component/maturity: experimental
 spec:
   description: Dependency scanner for Node.js projects.
   volumes:
