--- a/deploy/smithy/chart/values.yaml
+++ b/deploy/smithy/chart/values.yaml
@@ -19,8 +19,11 @@ kibana:
     tlsEnabled: false
 
 mongodb:
-  # if set, a MongoDB instance will be deployed
-  enabled: true
+  # if set, a MongoDB instance will be deployed.
+  # Disabled as there's currently an issue with M1-M3 processors and workarounds are necessary
+  # https://github.com/bitnami/containers/issues/53407
+  # It's better to stop leveraging MongoDB locally until the issue is resolved.
+  enabled: false
   # auth:
   #   enabled: true
   #   usernames: ["consumer-mongodb"]
