--- a/components/producers/snyk-node/task.yaml
+++ b/components/producers/snyk-node/task.yaml
@@ -67,6 +67,7 @@ spec:
     args:
     - "-in=/scratch/snyk.out"
     - "-out=$(workspaces.output.path)/.smithy/producers/snyk.pb"
+    - "-language=javascript"
     volumeMounts:
     - mountPath: /scratch
       name: scratch
