Building Dockerfile and running it with gitea on docker-compose.

--- a/new-components/targets/git-clone/.env.git-clone
+++ b/new-components/targets/git-clone/.env.git-clone
@@ -1,5 +1,6 @@
+SMITHY_COMPONENT_NAME=git-clone
 SMITHY_INSTANCE_ID=8d719c1c-c569-4078-87b3-4951bd4012ee
 SMITHY_LOG_LEVEL=debug
 SMITHY_BACKEND_STORE_TYPE=local
-GIT_CLONE_REPO_URL=http://gitea:3000/gitcloner/testrepo.git
+GIT_CLONE_REPO_URL=http://gitea:3000/root/testrepo.git
 GIT_CLONE_REFERENCE=main
