--- a/new-components/targets/git-clone/env/.env.gitea
+++ b/new-components/targets/git-clone/env/.env.gitea
@@ -2,8 +2,7 @@ USER_UID=1000
 USER_GID=1000
 GITEA__database__DB_TYPE=sqlite3
 GITEA__database__HOST=localhost:3306
-GITEA__database__NAME=gitea
-GITEA__database__USER=gitea
-GITEA__database__PASSWD=gitea
+# Skips manual setup step.
 GITEA__security__INSTALL_LOCK=true
+# Skips more complex checks on cookies.
 GITEA__security__DISABLE_AUTHENTICATION=true
