--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,11 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    services:
+      dind:
+        image: docker:23.0-rc-dind-rootless
+        ports:
+          - 2375:2375
     concurrency:
       group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}-test
       cancel-in-progress: true
