--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ deploy/smithy/chart/charts
 .idea/
 components/consumers/pdf/report.html
 new-components/targets/git-clone/pkg/git/testdata/gitea
+**/.DS_STORE
