Removing unused Local Storage env var from new-components and adding postgres configuration.

--- a/new-components/enrichers/custom-annotation/.env
+++ b/new-components/enrichers/custom-annotation/.env
@@ -1,6 +1,7 @@
 # This is for local setup only.
 SMITHY_INSTANCE_ID=8d719c1c-c569-4078-87b3-4951bd4012ee
 SMITHY_LOG_LEVEL=debug
-SMITHY_BACKEND_STORE_TYPE=local
+SMITHY_STORE_TYPE=postgresql
+SMITHY_REMOTE_STORE_POSTGRES_DSN="postgresql://smithy:smithy1234@findings-db:5432/findings-db?sslmode=disable&connect_timeout=10"
 CUSTOM_ANNOTATION_NAME=reachability
 CUSTOM_ANNOTATION_VALUES={"foo":"bar"}
