--- a/new-components/targets/git-clone/env/.env.git-clone
+++ b/new-components/targets/git-clone/env/.env.git-clone
@@ -1,5 +1,6 @@
+# This is for local setup only.
 SMITHY_INSTANCE_ID=8d719c1c-c569-4078-87b3-4951bd4012ee
 SMITHY_LOG_LEVEL=debug
-SMITHY_BACKEND_STORE_TYPE=local
-GIT_CLONE_REPO_URL=http://gitea:3000/gitcloner/testrepo.git
-GIT_CLONE_REFERENCE=main
+GIT_CLONE_REPO_URL=https://github.com/0c34/govwa.git
+GIT_CLONE_REFERENCE=master
+GIT_CLONE_PATH=repos
