--- a/new-components/scanners/gosec/.env
+++ b/new-components/scanners/gosec/.env
@@ -1,5 +1,6 @@
 # This is for local setup only.
 SMITHY_INSTANCE_ID=8d719c1c-c569-4078-87b3-4951bd4012ee
 SMITHY_LOG_LEVEL=debug
-SMITHY_BACKEND_STORE_TYPE=local
-GOSEC_RAW_OUT_FILE_PATH=gosec_out.json
+SMITHY_IS_LOCAL=false
+SMITHY_STORE_TYPE=postgresql
+SMITHY_REMOTE_STORE_POSTGRES_DSN="postgresql://smithy:smithy1234@findings-db:5432/findings-db?sslmode=disable&connect_timeout=10"
