Re-disabling CGO when building containers.

--- a/new-components/Dockerfile
+++ b/new-components/Dockerfile
@@ -17,7 +17,7 @@ RUN CGO_CPPFLAGS="-D_FORTIFY_SOURCE=2 -fstack-protector-all" \
     # Makes memory exploitation harder.
     # Add a small overhead at compile time.
     GOFLAGS="-buildmode=pie" \
-#    CGO_ENABLED=0 \
+    CGO_ENABLED=0 \
     GOOS="linux" \
     GOARCH="amd64" \
       go build -ldflags "-s -w" -trimpath -o app ${COMPONENT_BINARY_SOURCE_PATH}
