--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,5 +1,9 @@
 version: v2
 plugins:
-  - local: protoc-gen-go
-    out: .
+  - remote: buf.build/protocolbuffers/go:v1.31.0
+    out: sdk/gen
     opt: paths=source_relative
+  - remote: buf.build/grpc/go:v1.5.1
+    out: sdk/gen
+    opt:
+      - paths=source_relative
