--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -1,35 +1,35 @@
 ---
 runner:
   go/vet:
-    cmd: go vet $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto/)
+    cmd: go vet $(go list ./...  | grep -v github.com/smithy-security/smithy/api/proto/)
     format: govet
 
   go/staticcheck:
-    cmd: staticcheck -checks "all,-SA1019,-ST1000" $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto)
+    cmd: staticcheck -checks "all,-SA1019,-ST1000" $(go list ./... | grep -v github.com/smithy-security/smithy/api/proto)
     format: staticcheck
 
   go/revive:
-    cmd: go list ./... | xargs revive -config revive.toml
+    cmd: revive -config revive.toml $(go list ./...)
     errorformat:
       - '%f:%l:%c: %m'
  
   go/containedctx:
-    cmd: go vet -vettool=$(which containedctx) $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto)
+    cmd: go vet -vettool=$(which containedctx) $(go list ./... | grep -v github.com/smithy-security/smithy/api/proto)
     errorformat:
       - '%f:%l:%c: %m'
 
   go/ineffassign:
-    cmd: ineffassign $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto)
+    cmd: ineffassign $(go list ./... | grep -v github.com/smithy-security/smithy/api/proto)
     errorformat:
       - '%f:%l:%c: %m'
 
   go/errorlint:
-    cmd: go-errorlint -errorf-multi -errorf -test $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto)
+    cmd: go-errorlint -errorf-multi -errorf -test $(go list ./... | grep -v github.com/smithy-security/smithy/api/proto)
     errorformat:
       - '%f:%l:%c: %m'
 
   go/errcheck:
-    cmd: errcheck -asserts -blank $(go list ./... | grep -v /vendor/ | grep -v github.com/smithy-security/smithy/api/proto)
+    cmd: errcheck -asserts -blank $(go list ./... | grep -v github.com/smithy-security/smithy/api/proto)
     errorformat:
       - '%f:%l:%c:%m'
 
